project(caos)
cmake_minimum_required(VERSION 2.6.2)

IF(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
   SET(CMAKE_BUILD_TYPE RelWithDebInfo)
ENDIF(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)

SET(CMAKE_CXX_FLAGS "-Wall -fno-rtti")
SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2")
SET(CMAKE_CXX_FLAGS_DEBUG  "-O0 -g")

add_definitions(-Wall)

set(COMMON_INCLUDES ${PROJECT_SOURCE_DIR}/include)

add_subdirectory(src)

add_subdirectory(test)

find_package(Boost)

set(Boost_USE_STATIC_LIBS ON)